--- a/src/pages/second.html
+++ b/src/pages/second.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="../assets/svg/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/svg/logo.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OLIS</title>
     <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet"/>
